# gnn-llm-lab

./: .env.example  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  pyproject.toml
data/processed/: common_question_ids.json
docs/: INDEX.md  PROJECT_STATUS_REPORT.md  attention_experiment_design.md  cugraph_pyglib_analysis.md  experiment_design.md  finder_kg_analysis.md  gnn_kge_focused_analysis.md
docs/analysis/: comprehensive_experiment_report.md  kvcache_experiment_analysis.md
docs/design/: experiment_design.md  g_retrieval_experiment.md
docs/reference/: cugraph_pyg_study_guide.md  neo4j_schema.md
notebooks/: finder_full_comparison.ipynb  g_retrieval_comparison.ipynb  kvcache_analysis.ipynb  kvcache_analysis_executed.ipynb  soft_vs_hard_comparison.ipynb
prompts/: base_extraction.yaml  base_linking.yaml  entity_dedup.yaml  fibo_extraction.yaml  fibo_linking.yaml
results/kvcache_experiment/20260208_091053/: config.json  results_log.jsonl  summary.csv  summary.json
scripts/: analyze_graph.py  build_kg.py  build_pyg_dataset.py  colab_setup.sh  comprehensive_analysis.py  download_dataset.py  generate_common_question_ids.py  sample_subgraph.py
src/: data.py  kvcache_experiment.py  load_finder_kg.py  models.py  opik_experiment.py  run_experiment.py  soft_vs_hard_experiment.py  train_kge.py
src/_legacy/: attention_experiment.py  evaluation.py  experiment_colab.py  llm_baseline.py  models.py  train_gnn.py
src/_legacy/utils/: attention_analysis.py
src/data/: __init__.py  collate.py  finder_dataset.py  graph_builders.py  vocabulary.py
src/utils/: __init__.py  attention.py  config.py  evaluation.py  exceptions.py  few_shot.py  formatting.py  llm_client.py  local_llm.py  logging_config.py  neo4j_client.py  reproducibility.py  vllm_metrics.py
tests/: __init__.py  test_utils.py
