[project]
name = "gnnllm-lab"
version = "0.1.0"
description = "GNN+LLM Experiment Lab - Graph RAG comparison using FinDER Knowledge Graph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GNN+LLM Lab", email = "lab@example.com"}
]
keywords = ["gnn", "llm", "graph-rag", "knowledge-graph", "neo4j"]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",

    # Neo4j
    "neo4j>=5.0.0",

    # Configuration
    "python-dotenv>=1.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Progress bars
    "tqdm>=4.65.0",

    # LLM API
    "openai>=1.0.0",
]

[project.optional-dependencies]
# ML dependencies (install separately for CUDA compatibility)
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentence-transformers>=2.2.0",
    "huggingface-hub>=0.19.0",
]

# Quantization support
quantization = [
    "bitsandbytes>=0.41.0",
]

# PCST subgraph pruning
pcst = [
    "pcst-fast>=1.0.7",
]

# Evaluation metrics
eval = [
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# All dependencies
all = [
    "gnnllm-lab[ml,quantization,pcst,eval,dev]",
]

[project.urls]
repository = "https://github.com/tteon/gnn-llm-lab"

[project.scripts]
load-finder-kg = "src.load_finder_kg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
    | data
    | results
    | notebooks
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]
